fix: ios flip visibility

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -817,12 +817,14 @@ body:has(.side-menu:checked) {
 .driver-card {
   height: 400px;
   perspective: 1000px;
+  -webkit-perspective: 1000px;
 }
 .driver-card__inner {
   width: 100%;
   height: 100%;
   transition: transform 0.8s cubic-bezier(0.175, 0.885, 0.32, 1.275);
   transform-style: preserve-3d;
+  -webkit-transform-style: preserve-3d;
   position: relative;
 }
 .driver-card:hover .driver-card__inner {
