--- a/src/styles/components/_drivers.scss
+++ b/src/styles/components/_drivers.scss
@@ -35,12 +35,14 @@
 .driver-card {
   height: 400px;
   perspective: 1000px;
+  -webkit-perspective: 1000px;
 
   &__inner {
     width: 100%;
     height: 100%;
     transition: transform 0.8s cubic-bezier(0.175, 0.885, 0.32, 1.275);
     transform-style: preserve-3d;
+    -webkit-transform-style: preserve-3d;
     position: relative;
   }
 
